--- a/src/app/modales/skill-add-edit/skill-add-edit.component.html
+++ b/src/app/modales/skill-add-edit/skill-add-edit.component.html
@@ -55,10 +55,10 @@
         </div>
       </div>
 
-      <!-- Boton Guardar/Agregar -->
+      <!-- Boton Agregar/Guardar -->
       <div class="modal-footer">
-        <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal" *ngIf="!addMode">Guardar</button>
-        <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal" *ngIf="addMode">Agregar</button>
+        <button type="submit" class="btn" data-bs-dismiss="modal" *ngIf="!addMode">Guardar</button>
+        <button type="submit" class="btn" data-bs-dismiss="modal" *ngIf="addMode">Agregar</button>
       </div>
     </div>
   </form>
