--- a/src/app/components/skills-soft/skills-soft.component.html
+++ b/src/app/components/skills-soft/skills-soft.component.html
@@ -1,37 +1,34 @@
-<div class="container-fluid mt-5 mb-5">
-  <div class="titulo m-5 d-flex flex-row justify-content-between">
-    <div>
-      <h1 #softskill id="soft">Soft Skills</h1>
+<div class="container-fluid mt-5 mb-5" id="soft">
+     <!-- Titulo -->
+     <h1 #softskills1 class="titulo mt-5 mb-0" >Soft Skills</h1>
+     <div  class="d-flex justify-content-end">
+      <!-- Modal boton agregar educacion -->
+      <button #softskills2 type="button" class="btn text-white d-flex flex-row align-items-start ani"
+      (click)="addEditSkill(id)" *ngIf="loggedIn">
+        <i class="fa-solid fa fa-plus m-1"></i>
+        <span>Agregar</span>
+      </button>
     </div>
-    <!-- Modal boton agregar Skill -->
-    <button #softskill2 type="button" class="btn text-white d-flex flex-row align-items-end ani" (click)="addEditSkill(id)"
-      *ngIf="loggedIn">
-      <i class="fa-solid fa fa-plus m-1"></i>
-      <span>Agregar</span>
-    </button>
-  </div>
-
-  <div #softskill1 class="col-12 d-flex flex-wrap justify-content-evenly align-items-center mt-5 mb-5 ani" id="soft">
-    <div *ngFor="let skill of skillSoft; let i = index">
-      <div class="card mt-2 mb-2" style="width: 20rem;">
-        <img [src]="skill.imagen" class="card-img-top" alt="skill">
-        <div class="card-body ">
-          <h5 class="card-title ">{{skill.nombre}}</h5>
-          <p class="card-text text-white">{{skill.descripcion}}</p>
-        </div>
+<!-- Cuerpo de la seccion -->
+<div #softskills class="col-12 mt-5 mb-5 d-flex flex-wrap justify-content-evenly align-items-center ani">
+  <div *ngFor="let skill of skillSoft; let i = index">
+    <div class="card mt-2 mb-2" style="width: 20rem;">
+      <img [src]="skill.imagen" class="card-img-top" alt="skill">
+      <div class="card-body ">
+        <h5 class="card-title">{{skill.nombre}}</h5>
+        <p class="card-text text-white">{{skill.descripcion}}</p>
       </div>
-      <div class="container d-flex justify-content-center">
-        <!-- Modal boton edicion Soft Skills -->
-
-        <button type="button" class="btn text-white fa fa-pencil" (click)="addEditSkill(skill.id)" *ngIf="loggedIn">
-        </button>
-        <!-- Boton eliminar Soft Skills -->
-        <button type="button" class="btn" (click)="deleteSkill(skill.id)" *ngIf="loggedIn">
-          <i class="fa-solid fa-trash text-white"></i>
-        </button>
-      </div>
+    </div>
+    <div class="container d-flex justify-content-center">
+      <!-- Modal boton edicion Soft Skills -->
+      <button type="button" class="btn text-white fa fa-pencil" (click)="addEditSkill(skill.id)" *ngIf="loggedIn">
+      </button>
+      <!-- Boton eliminar Soft Skills -->
+      <button type="button" class="btn" (click)="deleteSkill(skill.id)" *ngIf="loggedIn">
+        <i class="fa-solid fa-trash text-white"></i>
+      </button>
     </div>
   </div>
 </div>
-
+</div>
 <app-skill-soft-add-edit></app-skill-soft-add-edit>
