--- a/src/app/components/educacion/educacion.component.css
+++ b/src/app/components/educacion/educacion.component.css
@@ -1,7 +1,5 @@
-
 @import "@fontsource/fredoka-one";
 @import "@fontsource/roboto";
-
 
 /*Estilo titulo principal y animacion*/
 h1 {
@@ -13,26 +11,24 @@ h1 {
   text-transform: uppercase;
   letter-spacing: 15px;
   padding: 1px;
-   opacity: 0;
   transition: 2s;
   transform: scale(0)
 }
 
 h1.fadeIn {
-  opacity: 1;
   transform: scale(1)
 }
 
 /*Estilos para efecto FadeIn*/
 .ani {
-   opacity: 0;
+  opacity: 0;
   transition: 1s;
- transform: translateY(-100px);
+  transform: translateX(-100px);
 }
 
 .ani.fadeIn {
- opacity: 1;
- transform: translateY(0);
+  opacity: 1;
+  transform: translateX(0);
 }
 
 /*Borde blanco inferior titulo*/
@@ -41,14 +37,12 @@ h1.fadeIn {
 }
 
 /*Estilos Agregar*/
-span{
+span {
   font-size: calc(.8rem + .6vw);
   color: #ffffff;
 }
 
-
 /*Rectangulos con nombre de la institucion*/
-
 .circulo {
   margin: 2%;
   width: 130px;
@@ -63,6 +57,7 @@ span{
 .circulo:hover {
   background-color: #C91A76;
   transition: all ease 0.2s;
+
 }
 
 .active {
@@ -74,19 +69,33 @@ span{
   overflow-y: auto;
 }
 
-/*Estilo nombre corto institucion dentro del circulo*/
+/*Scrollbar*/
 
+.col-lg-3::-webkit-scrollbar {
+  width: 2px;
+}
+
+.col-lg-3::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+.col-lg-3::-webkit-scrollbar-thumb {
+  background-color: #0ab89e;
+  border: 4px solid rgb(10, 10, 10);
+  border-radius: 10px;
+}
+
+/*Estilo nombre corto institucion dentro del circulo*/
 .nombre {
   color: #e6e6e6;
   font-family: "Roboto", sans-serif;
-  font-size: calc(0.5rem + 0.8vw);
+  font-size: calc(0.4rem + 1vw);
+  text-transform: uppercase;
   padding: 3%;
   margin: 3%;
-  text-transform: uppercase;
 }
 
 /*Estilo nombre del puesto*/
-
 #puesto {
   font-family: "Fredoka One", sans-serif;
   letter-spacing: 3px;
@@ -99,7 +108,7 @@ span{
   margin-bottom: 0;
 }
 
-.row{
+.row {
   flex-direction: row;
 }
 
@@ -109,20 +118,23 @@ span{
   color: #a7055b;
   font-family: "Roboto", sans-serif;
   font-weight: 900;
-  font-size: calc(0.8rem + 1vw);
+  font-size: calc(0.6rem + 1vw);
 }
 
 /*Estilo periodo de la educacion*/
-
 #periodo {
-  font-size: calc(0.7rem + 0.5vw);
+  font-size: calc(0.2rem + 1vw);
   font-family: "Roboto", sans-serif;
   color: #ffffff;
 }
 
+/*Estilo descripcion*/
+#descri {
+  font-family: "Roboto", sans-serif;
+  
+}
 
 /*Logo institucion*/
-
 img {
   margin: 3%;
   width: 30%;
@@ -130,19 +142,18 @@ img {
 }
 
 /*Cambios de estilo segun tamaño de pantalla*/
-
 @media (max-width: 991.98px) {
   #botones {
     flex-direction: row;
     overflow-x: auto;
   }
 
-  .row{
+  .row {
     flex-direction: column-reverse;
   }
 
   img {
-    width: 45%;
+    width: 35%;
   }
 }
 
@@ -162,8 +173,7 @@ img {
 @media (max-width: 576px) {
 
   img {
-    width: 50%;
+    width: 40%;
   }
 
 }
-
