--- a/src/app/components/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia/experiencia.component.css
@@ -25,12 +25,12 @@ h1.fadeIn {
 .ani {
   opacity: 0;
   transition: 1s;
-  transform: translateY(-100px);
+  transform: translateX(-100px);
 }
 
 .ani.fadeIn {
  opacity: 1;
- transform: translateY(0);
+ transform: translateX(0);
 }
 
 /*Borde blanco inferior titulo*/
@@ -81,6 +81,22 @@ span{
   margin: 3%;
 }
 
+/*Scrollbar*/
+
+.col-lg-3::-webkit-scrollbar {
+  width: 2px;
+}
+
+.col-lg-3::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+.col-lg-3::-webkit-scrollbar-thumb {
+  background-color: #0ab89e;
+  border: 4px solid rgb(10, 10, 10);
+  border-radius: 10px;
+}
+
 /*Estilo nombre del puesto*/
 
 #puesto {
@@ -107,11 +123,16 @@ span{
 /*Estilo periodo en el puesto*/
 
 #periodo {
-  font-size: calc(0.7rem + 0.5vw);
+  font-size: calc(0.2rem + 1vw);
   font-family: "Roboto", sans-serif;
   color: #ffffff;
 }
 
+/*Estilo descripcion*/
+#descri{
+  font-family: "Roboto", sans-serif;
+  
+ }
 
 /*Logo empresa*/
 
@@ -129,7 +150,7 @@ img {
   }
 
   img {
-    width: 45%;
+    width: 40%;
   }
 }
 
