--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -9,3 +9,7 @@
 <app-educacion></app-educacion>
 
 <app-experiencia></app-experiencia>
+
+<app-proyectos></app-proyectos>
+
+<app-contacto></app-contacto>
