--- a/src/app/components/skills-hard/skills-hard.component.html
+++ b/src/app/components/skills-hard/skills-hard.component.html
@@ -1,60 +1,65 @@
 <div class="container-fluid mt-5 mb-5" id="hard">
-    <!-- Titulo -->
-    <h1 #hardskill class="titulo mt-5 mb-0">Hard Skills</h1>
-   <div class="d-flex justify-content-end">
+  <!-- Titulo -->
+  <h1 #hardskill class="titulo mt-5 mb-0">Hard Skills</h1>
+  <div class="d-flex justify-content-end">
     <!-- Modal boton agregar educacion -->
-    <button #hardskill4 type="button" class="btn text-white d-flex flex-row align-items-start ani"
-    (click)="addEditSkill(id)" *ngIf="loggedIn">
+    <button #hardskill4 type="button" class="btn text-white d-flex flex-row align-items-center ani"
+      (click)="addEditSkill(id)" *ngIf="loggedIn">
       <i class="fa-solid fa fa-plus m-1"></i>
       <span>Agregar</span>
     </button>
   </div>
-
-
-  <div class="row justify-content-center" >
+  <!-- Seccion Frontend -->
+  <div class="row justify-content-center">
     <div class="col-lg-5 col-md-10 ani" #hardskill1>
       <!-- Subtitulo -->
-      <div class="container d-flex flex-row justify-content-center mt-4" >
-        <i class="fa-solid fa-laptop-code fa-2x text-white"></i>
-        <h4 class="text-white">Frontend</h4>
+      <div class="container d-flex flex-row justify-content-center mt-5 mb-5">
+        <i class="fa-solid fa-laptop-code fa-2x text-white m-2"></i>
+        <h4 class="text-white m-2">Frontend</h4>
       </div>
       <!-- Listado Frontend Skills -->
-      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo">
-        <div class="container m-3"  *ngSwitchCase="'Frontend'" >
-          <div class="container d-flex flex-row" >
-            <div class="container d-flex align-items-end">
-              <h5 class="font-weight-bold text-uppercase text-white">{{skill.nombre}}</h5>
+      <div cdkDropList (cdkDropListDropped)="drop($event)">
+        <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag>
+          <div class="container m-3" *ngSwitchCase="'Frontend'">
+            <div class="container d-flex flex-row">
+              <div class="container d-flex align-items-end">
+                <h6 class="font-weight-bold text-uppercase text-white">{{skill.nombre}}</h6>
+              </div>
+              <div class="container d-flex justify-content-end">
+                <!-- Modal boton edicion Frontend -->
+                <button type="button" class="btn text-white fa fa-pencil" (click)="addEditSkill(skill.id)"
+                  *ngIf="loggedIn">
+                </button>
+                <!-- Boton eliminar Frontend -->
+                <button type="button" class="btn" (click)="deleteSkill(skill.id)" *ngIf="loggedIn">
+                  <i class="fa-solid fa-trash text-white"></i>
+                </button>
+              </div>
             </div>
-            <div class="container d-flex justify-content-end">
-              <!-- Modal boton edicion Frontend -->
-              <button type="button" class="btn text-white fa fa-pencil" (click)="addEditSkill(skill.id)" *ngIf="loggedIn">
-              </button>
-              <!-- Boton eliminar Frontend -->
-              <button type="button" class="btn" (click)="deleteSkill(skill.id)" *ngIf="loggedIn">
-                <i class="fa-solid fa-trash text-white"></i>
-              </button>
-            </div>
-          </div>
-          <!-- Progress bar Frontend -->
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" [style.width.%]="skill.porcentaje" aria-valuenow="0"
-              aria-valuemin="0" aria-valuemax="100"
-              [ngClass]="{'html': i == 0, 'css' : i==1, 'bootstrap': i==2, 'javascript': i==3, 'angular': i==4}">
-              {{skill.porcentaje}}%
+            <!-- Progress bar Frontend -->
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" [style.width.%]="skill.porcentaje" aria-valuenow="0"
+                aria-valuemin="0" aria-valuemax="100"
+                [ngClass]="{'html': i == 0, 'css' : i==1, 'bootstrap': i==2, 'javascript': i==3, 'angular': i==4}">
+                {{skill.porcentaje}}%
+              </div>
             </div>
           </div>
         </div>
       </div>
+
     </div>
-
+    <!-- Seccion Backend -->
     <div class="col-lg-5 col-md-10 ani" #hardskill2>
-      <div class="container d-flex align-items-center justify-content-center mt-4">
-        <i class="fa-solid fa-laptop-code fa-2x text-white"></i>
-        <h4 class="text-white">Backend</h4>
+      <!-- Subtitulo -->
+      <div class="container d-flex align-items-center justify-content-center mt-5 mb-5">
+        <i class="fa-solid fa-laptop-code fa-2x text-white m-2"></i>
+        <h4 class="text-white m-2">Backend</h4>
       </div>
-
-      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" >
-        <div class="container m-3" *ngSwitchCase="'Backend'" >
+      <!-- Listado Backend Skills -->
+      <div cdkDropList (cdkDropListDropped)="drop($event)">
+      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag>
+        <div class="container m-3" *ngSwitchCase="'Backend'">
           <div class="container d-flex flex-row">
             <div class="container d-flex align-items-end">
               <h5 class="font-weight-bold text-uppercase text-white">{{skill.nombre}}</h5>
@@ -70,6 +75,7 @@
               </button>
             </div>
           </div>
+          <!-- Progress-bar Backend -->
           <div class="progress">
             <div class="progress-bar" role="progressbar" [style.width.%]="skill.porcentaje" aria-valuenow="0"
               aria-valuemin="0" aria-valuemax="100" [ngClass]="{'java': i == 5, 'spring' : i==6, 'mysql': i==7}">
@@ -78,14 +84,16 @@
           </div>
         </div>
       </div>
-
-
+    </div>
+      <!-- Seccion Idiomas -->
       <div class="container d-flex align-items-center justify-content-center mt-4 ani" #hardskill3>
-        <i class="fa-solid fa-language fa-2x text-white"></i>
-        <h4 class="text-white">Idiomas</h4>
+        <!-- Subtitulo -->
+        <i class="fa-solid fa-language fa-2x text-white m-2"></i>
+        <h4 class="text-white m-2">Idiomas</h4>
       </div>
-
-      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" >
+      <!-- Listado Idiomas -->
+      <div cdkDropList (cdkDropListDropped)="drop($event)">
+      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag>
         <div class="container m-3" *ngSwitchCase="'Idioma'">
           <div class="container d-flex flex-row">
             <div class="container d-flex align-items-end">
@@ -102,6 +110,7 @@
               </button>
             </div>
           </div>
+          <!-- Progress-bar Idiomas -->
           <div class="progress">
             <div class="progress-bar" role="progressbar" [style.width.%]="skill.porcentaje" aria-valuenow="0"
               aria-valuemin="0" aria-valuemax="100" [ngClass]="{'ingles': i == 9, 'japones' : i==10}">
@@ -110,6 +119,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </div>
